--- a/src/nginx.autoindex.conf
+++ b/src/nginx.autoindex.conf
@@ -3,28 +3,32 @@
         # email: fulicat@qq.com
         # date: %date%
         # #usage -> put this in server: include nginx.autoindex.conf;
+
         location ~ \/$ {
+            # options
+            set $page_options '%page_options%';
+            # template
+            set $page_styles '%page_styles%';
+            set $page_start '%page_start%';
+            set $page_end '%page_end%';
+
             autoindex on;
             autoindex_exact_size off;
             autoindex_format json;
             autoindex_localtime on;
-
-            add_header Content-Type "";
+            add_header Content-Type '';
             add_header Content-Type text/html;
-            set $ua_lang "";
-            set $charset "utf-8";
+            set $charset 'utf-8';
+            set $ua_lang '';
             if ($http_user_agent ~* "Windows NT") {
-                set $ua_lang "Windows";
+                set $ua_lang 'Windows';
             }
             if ($http_accept_language ~* "zh-CN") {
-                set $ua_lang "$ua_lang.zh-CN";
+                set $ua_lang '$ua_lang.zh-CN';
             }
             if ($ua_lang = "Windows.zh-CN") {
-                set $charset "gbk";
+                set $charset 'gbk';
             }
-            set $page_styles '%page_styles%';
-            set $page_start '%page_start%';
-            set $page_end '%page_end%';
             sub_filter_types application/json;
             sub_filter_once on;
             sub_filter '[' $page_start;
